升级jdk-21，并使用新特性